<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mvpires.wowprofile.CharacterListFragment">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/relativeSearchField"

        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/background">


        <Button
            android:text="@string/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:id="@+id/search_button"
            android:layout_below="@+id/editText_search_name"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/search_name_field"
            android:background="@color/colorPriest"
            android:ems="10"
            android:layout_marginTop="24dp"
            android:id="@+id/editText_search_name"
            android:layout_below="@+id/editText_search_realm"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:srcCompat="@drawable/wow_icon"
            android:id="@+id/imageView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:background="@color/colorPriest"
            android:ems="10"
            android:hint="@string/realm_name"
            android:id="@+id/editText_search_realm"
            android:layout_below="@+id/imageView"
            android:layout_alignLeft="@+id/editText_search_name"
            android:layout_alignStart="@+id/editText_search_name"
            android:layout_marginTop="50dp" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:id="@+id/progressBarCharSearch" />


    </RelativeLayout>




    <include layout="@layout/layout_search"/>

    <include layout="@layout/layout_empty"/>




</FrameLayout>
