<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    android:id="@+id/itemCharView"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:orientation="vertical" android:layout_width="match_parent"
        app:cardCornerRadius="8dp"
        android:background="@color/backgroundDark"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/faction_horde"
            android:id="@+id/imageView_char_faction_item"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="8dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gender_male"
            android:id="@+id/imageView_char_gender_item"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_alignTop="@+id/imageView_char_class_item"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/race_dwarf_male"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="8dp"
            android:id="@+id/imageView_char_race_item"
            android:layout_alignTop="@+id/imageView_char_gender_item"
            android:layout_toLeftOf="@+id/imageView_char_gender_item"
            android:layout_toStartOf="@+id/imageView_char_gender_item" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/class_deathknight"
            android:id="@+id/imageView_char_class_item"
            android:layout_alignTop="@+id/imageView_char_faction_item"
            android:layout_toRightOf="@+id/imageView_char_faction_item"
            android:layout_toEndOf="@+id/imageView_char_faction_item" />

        <TextView
            android:text="@string/char_name"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_char_name_item"
            android:layout_marginRight="8dp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/imageView_char_faction_item"
            android:layout_alignStart="@+id/imageView_char_faction_item"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp" />

        <TextView
            android:text="@string/char_class"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView_char_class_item"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/imageView_char_class_item"
            android:layout_alignStart="@+id/imageView_char_class_item" />

        <TextView
            android:text="@string/char_level"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:id="@+id/textView_char_level_item"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/imageView_char_race_item"
            android:layout_alignStart="@+id/imageView_char_race_item" />

        <TextView
            android:text="@string/char_guild_name"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/textView_char_guild_name_item"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/imageView_char_gender_item"
            android:layout_alignStart="@+id/imageView_char_gender_item" />


    </RelativeLayout>
</android.support.v7.widget.CardView>